Fixed <p> not having left & right margins on page 'om färdtjänst' on mobile view

--- a/style/_omfardtjanst.scss
+++ b/style/_omfardtjanst.scss
@@ -44,5 +44,11 @@ main.om-färdtjänst {
         margin: 1.4rem 1rem;
       }
     }
+    .information{
+      width: 100%;
+      p{
+        margin: 1.4rem 1rem;
+      }
+    }
   }
 }
